seaqt/QtWidgets/gen_qtreewidget.h

typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QTreeWidget QTreeWidget;
typedef struct QTreeWidgetItem QTreeWidgetItem;
typedef struct QWidget QWidget;
void QTreeWidget_setColumnCount(QTreeWidget* self, int columns);
QTreeWidgetItem* QTreeWidget_invisibleRootItem(const QTreeWidget* self);
QTreeWidgetItem* QTreeWidget_topLevelItem(const QTreeWidget* self, int index);
int QTreeWidget_topLevelItemCount(const QTreeWidget* self);
void QTreeWidget_insertTopLevelItem(QTreeWidget* self, int index, QTreeWidgetItem* item);
void QTreeWidget_addTopLevelItem(QTreeWidget* self, QTreeWidgetItem* item);
QTreeWidgetItem* QTreeWidget_takeTopLevelItem(QTreeWidget* self, int index);
int QTreeWidget_indexOfTopLevelItem(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_insertTopLevelItems(QTreeWidget* self, int index, struct miqt_array /* of QTreeWidgetItem* */  items);
void QTreeWidget_addTopLevelItems(QTreeWidget* self, struct miqt_array /* of QTreeWidgetItem* */  items);
QTreeWidgetItem* QTreeWidget_headerItem(const QTreeWidget* self);
void QTreeWidget_setHeaderItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setHeaderLabels(QTreeWidget* self, struct miqt_array /* of struct miqt_string */  labels);
void QTreeWidget_setHeaderLabel(QTreeWidget* self, struct miqt_string label);
QTreeWidgetItem* QTreeWidget_currentItem(const QTreeWidget* self);
int QTreeWidget_currentColumn(const QTreeWidget* self);
void QTreeWidget_setCurrentItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setCurrentItem2(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_setCurrentItem3(QTreeWidget* self, QTreeWidgetItem* item, int column, int command);
QTreeWidgetItem* QTreeWidget_itemAt(const QTreeWidget* self, QPoint* p);
QTreeWidgetItem* QTreeWidget_itemAt2(const QTreeWidget* self, int x, int y);
QRect* QTreeWidget_visualItemRect(const QTreeWidget* self, QTreeWidgetItem* item);
int QTreeWidget_sortColumn(const QTreeWidget* self);
void QTreeWidget_sortItems(QTreeWidget* self, int column, int order);
void QTreeWidget_editItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_openPersistentEditor(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_closePersistentEditor(QTreeWidget* self, QTreeWidgetItem* item);
bool QTreeWidget_isPersistentEditorOpen(const QTreeWidget* self, QTreeWidgetItem* item);
QWidget* QTreeWidget_itemWidget(const QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_setItemWidget(QTreeWidget* self, QTreeWidgetItem* item, int column, QWidget* widget);
void QTreeWidget_removeItemWidget(QTreeWidget* self, QTreeWidgetItem* item, int column);
bool QTreeWidget_isItemSelected(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setItemSelected(QTreeWidget* self, QTreeWidgetItem* item, bool select);
struct miqt_array /* of QTreeWidgetItem* */  QTreeWidget_selectedItems(const QTreeWidget* self);
struct miqt_array /* of QTreeWidgetItem* */  QTreeWidget_findItems(const QTreeWidget* self, struct miqt_string text, int flags);
bool QTreeWidget_isItemHidden(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setItemHidden(QTreeWidget* self, QTreeWidgetItem* item, bool hide);
bool QTreeWidget_isItemExpanded(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setItemExpanded(QTreeWidget* self, QTreeWidgetItem* item, bool expand);
bool QTreeWidget_isFirstItemColumnSpanned(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setFirstItemColumnSpanned(QTreeWidget* self, QTreeWidgetItem* item, bool span);
QTreeWidgetItem* QTreeWidget_itemAbove(const QTreeWidget* self, QTreeWidgetItem* item);
QTreeWidgetItem* QTreeWidget_itemBelow(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setSelectionModel(QTreeWidget* self, QItemSelectionModel* selectionModel);
void QTreeWidget_scrollToItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_expandItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_collapseItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_clear(QTreeWidget* self);
void QTreeWidget_itemPressed(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemPressed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_itemClicked(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_itemDoubleClicked(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemDoubleClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_itemActivated(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemActivated(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_itemEntered(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemEntered(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_itemChanged(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_itemExpanded(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_connect_itemExpanded(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_itemCollapsed(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_connect_itemCollapsed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_currentItemChanged(QTreeWidget* self, QTreeWidgetItem* current, QTreeWidgetItem* previous);
void QTreeWidget_connect_currentItemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_itemSelectionChanged(QTreeWidget* self);
void QTreeWidget_connect_itemSelectionChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
struct miqt_string QTreeWidget_tr2(const char* s, const char* c);
struct miqt_string QTreeWidget_tr3(const char* s, const char* c, int n);
struct miqt_string QTreeWidget_trUtf82(const char* s, const char* c);
struct miqt_string QTreeWidget_trUtf83(const char* s, const char* c, int n);
void QTreeWidget_editItem2(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_openPersistentEditor2(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_closePersistentEditor2(QTreeWidget* self, QTreeWidgetItem* item, int column);
bool QTreeWidget_isPersistentEditorOpen2(const QTreeWidget* self, QTreeWidgetItem* item, int column);
struct miqt_array /* of QTreeWidgetItem* */  QTreeWidget_findItems3(const QTreeWidget* self, struct miqt_string text, int flags, int column);
void QTreeWidget_scrollToItem2(QTreeWidget* self, QTreeWidgetItem* item, int hint);